Erreur de connexion

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,14 @@
 <body>
     <h1>Welcome to the GUDLFT Registration Portal!</h1>
     Please enter your secretary email to continue:
+   
     <form action="showSummary" method="post">
         <label for="email">Email:</label>
-        <input type="email" name="email" id=""/>
+        <input type="email" name="email" id="" required/>
         <button type="submit">Enter</button>
     </form>
+    {% if error_message %}
+    <p style="color: red;">{{ error_message }}</p>
+    {% endif %}
 </body>
 </html>
