--- a/templates/booking.html
+++ b/templates/booking.html
@@ -7,6 +7,10 @@
 <body>
     <h2>{{competition['name']}}</h2>
     Places available: {{competition['numberOfPlaces']}}
+    
+    <!-- Ajouter une section pour afficher les informations sur les points -->
+    <p>Points required per place: {{competition['points_required']}}</p>
+    
     <form action="/purchasePlaces" method="post">
         <input type="hidden" name="club" value="{{club['name']}}">
         <input type="hidden" name="competition" value="{{competition['name']}}">
