--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,14 +8,24 @@
 <body>
     <h1>Welcome to the GUDLFT Registration Portal!</h1>
     Please enter your secretary email to continue:
-   
-    <form action="showSummary" method="post">
+    <form action="{{ url_for('showSummary') }}" method="post">
         <label for="email">Email:</label>
-        <input type="email" name="email" id="" required/>
+        <input type="email" name="email" id=""/>
         <button type="submit">Enter</button>
     </form>
-    {% if error_message %}
-    <p style="color: red;">{{ error_message }}</p>
+
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul class="flash-messages">
+          {% for message in messages %}
+            <li>{{ message }}</li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
+
+    {% if 'Aucun club trouvé avec cette adresse e-mail.' in messages %}
+        <p>Aucun club trouvé avec cette adresse e-mail.</p>
     {% endif %}
 </body>
 </html>
