--- a/templates/booking.html
+++ b/templates/booking.html
@@ -7,14 +7,10 @@
 <body>
     <h2>{{competition['name']}}</h2>
     Places available: {{competition['numberOfPlaces']}}
-    
-    <!-- Ajouter une section pour afficher les informations sur les points -->
-    <p>Points required per place: {{competition['points_required']}}</p>
-    
     <form action="/purchasePlaces" method="post">
         <input type="hidden" name="club" value="{{club['name']}}">
         <input type="hidden" name="competition" value="{{competition['name']}}">
-        <label for="places">How many places?</label><input type="number" name="places" id=""/>
+        <label for="places">How many places?</label><input type="number" name="places" id="" min="0" max="12" required/>
         <button type="submit">Book</button>
     </form>
 </body>
